Players Endpoint. serializers and a few other things
