# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[7.1].define(version: 2024_07_29_043615) do
+ActiveRecord::Schema[7.1].define(version: 2024_07_31_032637) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
 
@@ -129,8 +129,8 @@ ActiveRecord::Schema[7.1].define(version: 2024_07_29_043615) do
     t.bigint "tournament_id", null: false
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
-    t.boolean "checked_in", default: false, null: false
     t.boolean "team_sheet_submitted", default: false, null: false
+    t.datetime "checked_in_at", precision: nil
     t.index ["tournament_id"], name: "index_players_on_tournament_id"
     t.index ["user_id", "tournament_id"], name: "index_on_user_id_and_tournament_id", unique: true
     t.index ["user_id"], name: "index_players_on_user_id"
